--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Chris Rossmith <chris.rossmith@gmail.com>"]
 edition = "2018"
 license = "GPL-3.0"
+repository = "https://github.com/chrisrossmith/ipmimonitoring-sys"
+description = "Low level bindings for freeipmi libipmimonitoring"
+keywords = ["ipmi", "freeipmi"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
